--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "minimist": "^1.2.0",
     "moment": "^2.24.0",
     "node-opus": "^0.3.2",
+    "ref": "^1.3.5",
     "request": "^2.88.0",
     "typescript": "^3.5.1",
     "winston": "^3.2.1",
