--- a/bot-config.json
+++ b/bot-config.json
@@ -1,5 +1,5 @@
 {
     "discord": {
-        "token": "NTgwMjE2MTQwMzQ1OTAxMDc2.XVlxPQ.61BrwF0ThFJe5IpkrU0bQ0RKivI"
+        "token": "NTgwMjE2MTQwMzQ1OTAxMDc2.XVqX4Q.HaUIxuLThRkyhodeZXWCSzy-qgU"
     }
 }
