--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^12.0.7",
     "@types/winston": "^2.4.4",
     "axios": "^0.19.0",
+    "bluebird": "^3.5.5",
     "discord-command-parser": "^1.2.1",
     "discord.js": "^11.5.1",
     "jsonfile": "^2.4.0",
